--- a/RockstarGamesLauncher/Resources/Styles/Buttons.xaml
+++ b/RockstarGamesLauncher/Resources/Styles/Buttons.xaml
@@ -1,6 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
     <Style x:Key="BuyButton" TargetType="Button">
+        <Setter Property="Cursor" Value="Hand" />
         <Setter Property="Background">
             <Setter.Value>
                 <LinearGradientBrush StartPoint="1,0" EndPoint="1,1">
