--- a/RockstarGamesLauncher/Views/GamesView.xaml
+++ b/RockstarGamesLauncher/Views/GamesView.xaml
@@ -10,7 +10,7 @@
     mc:Ignorable="d">
 
     <Page.DataContext>
-        <viewmodels:GamesViewModel x:Name="GamesViewModel" />
+        <viewmodels:GamesViewModel />
     </Page.DataContext>
 
     <Grid>
@@ -36,7 +36,7 @@
 
                 <StackPanel Grid.Row="1" VerticalAlignment="Top">
                     <StackPanel Margin="0,20,0,0">
-                        <Label FontWeight="Bold">Now available</Label>
+                        <Label FontWeight="Bold" Visibility="{Binding IsExpanded, Converter={StaticResource BooleanToVisibilityConverter}}">Now available</Label>
                         <ListView
                             Background="Transparent"
                             BorderThickness="0"
@@ -57,7 +57,8 @@
                                             Margin="10,0,0,0"
                                             VerticalAlignment="Center"
                                             Content="{Binding Name}"
-                                            Opacity="0.65" />
+                                            Opacity="0.65"
+                                            Visibility="{Binding Path=IsExpanded, RelativeSource={RelativeSource AncestorType={x:Type viewmodels:GamesViewModel}}, Converter={StaticResource BooleanToVisibilityConverter}}" />
                                     </StackPanel>
                                 </DataTemplate>
                             </ListView.ItemTemplate>
@@ -66,7 +67,13 @@
                 </StackPanel>
 
                 <StackPanel Grid.Row="2">
-                    <Label>Collapse</Label>
+                    <Button
+                        HorizontalAlignment="Left"
+                        BorderThickness="0"
+                        Command="{Binding ToggleExpandCommand}"
+                        Foreground="White">
+                        Collapse
+                    </Button>
                 </StackPanel>
             </Grid>
         </Border>
@@ -95,7 +102,10 @@
                             <Button Margin="0,20,0,0" Style="{StaticResource BuyButton}">BUY NOW</Button>
                         </StackPanel>
 
-                        <ListView ItemsSource="{Binding SelectedGame.Feed}" Background="Transparent" BorderThickness="0">
+                        <ListView
+                            Background="Transparent"
+                            BorderThickness="0"
+                            ItemsSource="{Binding SelectedGame.Feed}">
                             <ListView.ItemsPanel>
                                 <ItemsPanelTemplate>
                                     <StackPanel Orientation="Horizontal" />
