start of settings general view

--- a/RockstarGamesLauncher/Resources/Styles/Reset.xaml
+++ b/RockstarGamesLauncher/Resources/Styles/Reset.xaml
@@ -9,4 +9,8 @@
         <Setter Property="Padding" Value="0" />
         <Setter Property="Foreground" Value="White" />
     </Style>
+
+    <Style TargetType="TextBlock">
+        <Setter Property="Foreground" Value="White" />
+    </Style>
 </ResourceDictionary>
