--- a/RockstarGamesLauncher/Views/Settings/SettingsGeneralView.xaml
+++ b/RockstarGamesLauncher/Views/Settings/SettingsGeneralView.xaml
@@ -10,5 +10,147 @@
     d:DesignWidth="800"
     mc:Ignorable="d">
 
-    <Grid />
+    <Border>
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="135" />
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+            </Grid.ColumnDefinitions>
+
+            <Border
+                Grid.Row="1"
+                Grid.Column="0"
+                MaxWidth="750"
+                Padding="35,0,35,0">
+                <StackPanel HorizontalAlignment="Stretch">
+                    <Grid Height="80">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="1*" />
+                            <ColumnDefinition Width="1*" />
+                        </Grid.ColumnDefinitions>
+
+                        <Label
+                            Grid.Column="0"
+                            VerticalAlignment="Center"
+                            FontSize="20">
+                            Language
+                        </Label>
+                        <ComboBox
+                            Grid.Column="1"
+                            Height="40"
+                            VerticalContentAlignment="Center">
+                            <ComboBoxItem Content="English" />
+                            <ComboBoxItem Content="Polski" />
+                            <ComboBoxItem Content="Italiano" />
+                        </ComboBox>
+                    </Grid>
+                    <Border Height="0.35" Background="White" />
+                    <DockPanel Height="80">
+                        <StackPanel VerticalAlignment="Center">
+                            <Label VerticalAlignment="Center" FontSize="20">Load when computer starts</Label>
+                            <Label
+                                VerticalAlignment="Center"
+                                FontSize="14"
+                                Opacity="0.65">
+                                Load the Rockstar Games Launcher when you start your computer
+                            </Label>
+                        </StackPanel>
+                        <Button
+                            Width="160"
+                            Height="40"
+                            HorizontalAlignment="Right"
+                            VerticalAlignment="Center"
+                            FontSize="16"
+                            Foreground="White">
+                            VIEW POLICY
+                        </Button>
+                    </DockPanel>
+                    <Border Height="0.35" Background="White" />
+                    <Grid Height="80">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="Auto" />
+                        </Grid.ColumnDefinitions>
+
+                        <StackPanel Grid.Column="0" VerticalAlignment="Center">
+                            <Label VerticalAlignment="Center" FontSize="20">Hibernate when running a game</Label>
+                            <TextBlock
+                                VerticalAlignment="Center"
+                                FontSize="14"
+                                Opacity="0.65"
+                                Text="When selected, the Rockstar Games Launcher will hiberate in the background whilst a game is running"
+                                TextWrapping="Wrap" />
+                        </StackPanel>
+                        <Button
+                            Grid.Column="1"
+                            Width="160"
+                            Height="40"
+                            HorizontalAlignment="Right"
+                            VerticalAlignment="Center"
+                            FontSize="16"
+                            Foreground="White">
+                            VIEW POLICY
+                        </Button>
+                    </Grid>
+                    <Border Height="0.35" Background="White" />
+                    <Grid Height="80">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="Auto" />
+                        </Grid.ColumnDefinitions>
+
+                        <StackPanel Grid.Column="0" VerticalAlignment="Center">
+                            <Label VerticalAlignment="Center" FontSize="20">Minimize on close</Label>
+                            <TextBlock
+                                VerticalAlignment="Center"
+                                FontSize="14"
+                                Opacity="0.65"
+                                Text="Send the Rockstar Games Launcher to the system tray when closing the active window"
+                                TextWrapping="Wrap" />
+                        </StackPanel>
+                        <Button
+                            Grid.Column="1"
+                            Width="160"
+                            Height="40"
+                            HorizontalAlignment="Right"
+                            VerticalAlignment="Center"
+                            FontSize="16"
+                            Foreground="White">
+                            VIEW POLICY
+                        </Button>
+                    </Grid>
+                    <Border Height="0.35" Background="White" />
+                    <Grid Height="80">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="Auto" />
+                        </Grid.ColumnDefinitions>
+
+                        <StackPanel Grid.Column="0" VerticalAlignment="Center">
+                            <Label VerticalAlignment="Center" FontSize="20">Scan PC for supported installs</Label>
+                            <TextBlock
+                                VerticalAlignment="Center"
+                                FontSize="14"
+                                Opacity="0.65"
+                                Text="Scan your computer for titles supported by the Rockstar Games Launcher and add them to your library"
+                                TextWrapping="Wrap" />
+                        </StackPanel>
+                        <Button
+                            Grid.Column="1"
+                            Width="160"
+                            Height="40"
+                            HorizontalAlignment="Right"
+                            VerticalAlignment="Center"
+                            FontSize="16"
+                            Foreground="White">
+                            VIEW POLICY
+                        </Button>
+                    </Grid>
+                </StackPanel>
+            </Border>
+        </Grid>
+    </Border>
 </Page>
