--- a/RockstarGamesLauncher/Views/Settings/SettingsUpdatesView.xaml
+++ b/RockstarGamesLauncher/Views/Settings/SettingsUpdatesView.xaml
@@ -5,10 +5,106 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:RockstarGamesLauncher.Views.Settings"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    Title="SettingsUpdates"
-    d:DesignHeight="450"
-    d:DesignWidth="800"
     mc:Ignorable="d">
 
-    <Grid />
+    <Border>
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="135" />
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+            </Grid.ColumnDefinitions>
+
+            <Border
+                Grid.Row="1"
+                Grid.Column="0"
+                MaxWidth="750"
+                Padding="35,0,35,0">
+                <StackPanel HorizontalAlignment="Stretch">
+                    <Grid Height="80">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="Auto" />
+                        </Grid.ColumnDefinitions>
+
+                        <StackPanel Grid.Column="0" VerticalAlignment="Center">
+                            <Label VerticalAlignment="Center" FontSize="20">Desktop notifications</Label>
+                            <TextBlock
+                                VerticalAlignment="Center"
+                                FontSize="14"
+                                Opacity="0.65"
+                                Text="The Rockstar Games Launcher will display desktop notifications for downloads &amp; errors"
+                                TextWrapping="Wrap" />
+                        </StackPanel>
+                        <Button
+                            Grid.Column="1"
+                            Width="160"
+                            Height="40"
+                            HorizontalAlignment="Right"
+                            VerticalAlignment="Center"
+                            FontSize="16"
+                            Foreground="White">
+                            VIEW POLICY
+                        </Button>
+                    </Grid>
+                    <Border Height="0.35" Background="White" />
+                    <Grid Height="80">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="Auto" />
+                        </Grid.ColumnDefinitions>
+
+                        <StackPanel Grid.Column="0" VerticalAlignment="Center">
+                            <Label VerticalAlignment="Center" FontSize="20">Throttle downloads</Label>
+                            <TextBlock
+                                VerticalAlignment="Center"
+                                FontSize="14"
+                                Opacity="0.65"
+                                Text="Set the maximum amount of bandwith available to the Rockstar Games Launcher for downloading game and launcher updates"
+                                TextWrapping="Wrap" />
+                        </StackPanel>
+                        <Button
+                            Grid.Column="1"
+                            Width="160"
+                            Height="40"
+                            HorizontalAlignment="Right"
+                            VerticalAlignment="Center"
+                            FontSize="16"
+                            Foreground="White">
+                            VIEW POLICY
+                        </Button>
+                    </Grid>
+                    <Border Height="0.35" Background="White" />
+                    <Grid Height="80">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="Auto" />
+                        </Grid.ColumnDefinitions>
+
+                        <StackPanel Grid.Column="0" VerticalAlignment="Center">
+                            <Label VerticalAlignment="Center" FontSize="20">Allow background downloads while in-game</Label>
+                            <TextBlock
+                                VerticalAlignment="Center"
+                                FontSize="14"
+                                Opacity="0.65"
+                                Text="Allow game and launcher updates in the background while running a game"
+                                TextWrapping="Wrap" />
+                        </StackPanel>
+                        <Button
+                            Grid.Column="1"
+                            Width="160"
+                            Height="40"
+                            HorizontalAlignment="Right"
+                            VerticalAlignment="Center"
+                            FontSize="16"
+                            Foreground="White">
+                            VIEW POLICY
+                        </Button>
+                    </Grid>
+                </StackPanel>
+            </Border>
+        </Grid>
+    </Border>
 </Page>
