--- a/RockstarGamesLauncher/Views/SettingsView.xaml
+++ b/RockstarGamesLauncher/Views/SettingsView.xaml
@@ -5,6 +5,8 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:RockstarGamesLauncher.Views"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:viewmodels="clr-namespace:RockstarGamesLauncher.ViewModels"
+    d:DataContext="{d:DesignData Type=viewmodels:SettingsViewModel}"
     Background="#141517"
     mc:Ignorable="d">
 
@@ -33,7 +35,7 @@
                                 HorizontalAlignment="Left"
                                 VerticalAlignment="Center"
                                 BorderThickness="0"
-                                Click="GoToGeneral"
+                                Command="{Binding GoToGeneralCommand}"
                                 Foreground="White"
                                 Opacity="0.65">
                                 General
@@ -43,7 +45,7 @@
                                 HorizontalAlignment="Left"
                                 VerticalAlignment="Center"
                                 BorderThickness="0"
-                                Click="GoToAccountInfo"
+                                Command="{Binding GoToAccountInfoCommand}"
                                 Foreground="White"
                                 Opacity="0.65">
                                 Account Information
@@ -53,7 +55,7 @@
                                 HorizontalAlignment="Left"
                                 VerticalAlignment="Center"
                                 BorderThickness="0"
-                                Click="GoToUpdates"
+                                Command="{Binding GoToUpdatesCommand}"
                                 Foreground="White"
                                 Opacity="0.65">
                                 Updates
@@ -63,7 +65,7 @@
                                 HorizontalAlignment="Left"
                                 VerticalAlignment="Center"
                                 BorderThickness="0"
-                                Click="GoToLegal"
+                                Command="{Binding GoToLegalCommand}"
                                 Foreground="White"
                                 Opacity="0.65">
                                 Legal
@@ -75,8 +77,8 @@
         </Border>
 
         <Frame
-            x:Name="Settings"
             Grid.Column="1"
+            Content="{Binding CurrentPage}"
             NavigationUIVisibility="Hidden" />
     </Grid>
 </Page>
