--- a/RockstarGamesLauncher/Views/GamesView.xaml
+++ b/RockstarGamesLauncher/Views/GamesView.xaml
@@ -2,6 +2,7 @@
     x:Class="RockstarGamesLauncher.Views.GamesView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:controls="clr-namespace:RockstarGamesLauncher.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:RockstarGamesLauncher.Views"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -9,183 +10,5 @@
     d:DataContext="{d:DesignData Type=viewmodels:GamesViewModel}"
     mc:Ignorable="d">
 
-    <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="Auto" />
-            <ColumnDefinition Width="*" />
-        </Grid.ColumnDefinitions>
-
-        <Grid.Background>
-            <ImageBrush ImageSource="{Binding SelectedGame.Images[0]}" Stretch="UniformToFill" />
-        </Grid.Background>
-
-        <Border
-            Name="Aside"
-            Grid.Column="0"
-            Width="320"
-            Padding="35,0,35,35"
-            Background="Black">
-            <Border.Style>
-                <Style>
-                    <Style.Triggers>
-                        <DataTrigger Binding="{Binding IsExpanded}" Value="true">
-                            <DataTrigger.EnterActions>
-                                <BeginStoryboard>
-                                    <Storyboard>
-                                        <DoubleAnimation
-                                            Storyboard.TargetProperty="Width"
-                                            From="120"
-                                            To="320"
-                                            Duration="0:0:0.25">
-                                            <DoubleAnimation.EasingFunction>
-                                                <ExponentialEase EasingMode="EaseOut" />
-                                            </DoubleAnimation.EasingFunction>
-                                        </DoubleAnimation>
-                                    </Storyboard>
-                                </BeginStoryboard>
-                            </DataTrigger.EnterActions>
-                            <DataTrigger.ExitActions>
-                                <BeginStoryboard>
-                                    <Storyboard>
-                                        <DoubleAnimation
-                                            Storyboard.TargetProperty="Width"
-                                            From="320"
-                                            To="120"
-                                            Duration="0:0:0.25">
-                                            <DoubleAnimation.EasingFunction>
-                                                <ExponentialEase EasingMode="EaseOut" />
-                                            </DoubleAnimation.EasingFunction>
-                                        </DoubleAnimation>
-                                    </Storyboard>
-                                </BeginStoryboard>
-                            </DataTrigger.ExitActions>
-                        </DataTrigger>
-                    </Style.Triggers>
-                </Style>
-            </Border.Style>
-
-            <Grid>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="135" />
-                    <RowDefinition Height="*" />
-                    <RowDefinition Height="Auto" />
-                </Grid.RowDefinitions>
-
-                <StackPanel Grid.Row="1" VerticalAlignment="Top">
-                    <StackPanel Margin="0,20,0,0">
-                        <Label FontWeight="Bold" Visibility="{Binding IsExpanded, Converter={StaticResource BooleanToVisibilityConverter}}">Now available</Label>
-                        <ListView
-                            Background="Transparent"
-                            BorderThickness="0"
-                            ItemsSource="{Binding Games}"
-                            SelectedItem="{Binding SelectedGame}">
-                            <ListView.ItemTemplate>
-                                <DataTemplate>
-                                    <StackPanel
-                                        Margin="0,10,0,0"
-                                        Cursor="Hand"
-                                        Orientation="Horizontal">
-                                        <Image
-                                            Width="30"
-                                            Height="30"
-                                            RenderOptions.BitmapScalingMode="HighQuality"
-                                            Source="{Binding Icon}" />
-                                        <Label
-                                            Margin="10,0,0,0"
-                                            VerticalAlignment="Center"
-                                            Content="{Binding Name}"
-                                            Opacity="0.65"
-                                            Visibility="{Binding Path=DataContext.IsExpanded, Converter={StaticResource BooleanToVisibilityConverter}, RelativeSource={RelativeSource AncestorType={x:Type ListView}}}" />
-                                    </StackPanel>
-                                </DataTemplate>
-                            </ListView.ItemTemplate>
-                        </ListView>
-                    </StackPanel>
-                </StackPanel>
-
-                <StackPanel Grid.Row="2">
-                    <Button
-                        Margin="5,0,0,0"
-                        HorizontalAlignment="Left"
-                        BorderThickness="0"
-                        Command="{Binding ToggleExpandCommand}"
-                        Foreground="White">
-                        <Image
-                            Width="30"
-                            Height="30"
-                            RenderOptions.BitmapScalingMode="HighQuality"
-                            RenderTransformOrigin="0.5,0.5"
-                            Source="/Resources/Icons/Sidebar.png">
-                            <Image.Style>
-                                <Style TargetType="Image">
-                                    <Style.Triggers>
-                                        <DataTrigger Binding="{Binding IsExpanded}" Value="False">
-                                            <Setter Property="RenderTransform">
-                                                <Setter.Value>
-                                                    <ScaleTransform ScaleX="-1" />
-                                                </Setter.Value>
-                                            </Setter>
-                                        </DataTrigger>
-                                    </Style.Triggers>
-                                </Style>
-                            </Image.Style>
-                        </Image>
-                    </Button>
-                </StackPanel>
-            </Grid>
-        </Border>
-
-        <Border Grid.Column="1">
-            <Grid>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="40" />
-                    <RowDefinition Height="*" />
-                </Grid.RowDefinitions>
-
-                <Border Grid.Row="1" Padding="35,0,0,0">
-                    <StackPanel
-                        Grid.Row="2"
-                        Margin="0,-75,0,0"
-                        HorizontalAlignment="Left"
-                        VerticalAlignment="Center"
-                        CanHorizontallyScroll="True"
-                        Orientation="Horizontal">
-                        <StackPanel VerticalAlignment="Center">
-                            <Image
-                                Width="280"
-                                HorizontalAlignment="Left"
-                                RenderOptions.BitmapScalingMode="HighQuality"
-                                Source="{Binding SelectedGame.Logo}" />
-                            <Button Margin="0,20,0,0" Style="{StaticResource BuyButton}">BUY NOW</Button>
-                        </StackPanel>
-
-                        <ListView
-                            Background="Transparent"
-                            BorderThickness="0"
-                            ItemsSource="{Binding SelectedGame.Feed}">
-                            <ListView.ItemsPanel>
-                                <ItemsPanelTemplate>
-                                    <StackPanel Orientation="Horizontal" />
-                                </ItemsPanelTemplate>
-                            </ListView.ItemsPanel>
-                            <ListView.ItemTemplate>
-                                <DataTemplate>
-                                    <Border
-                                        Width="420"
-                                        Margin="10,0,10,0"
-                                        Padding="5"
-                                        Background="Black">
-                                        <StackPanel>
-                                            <Image Source="{Binding Image}" Stretch="UniformToFill" />
-                                            <Label Content="{Binding Title}" />
-                                        </StackPanel>
-                                    </Border>
-                                </DataTemplate>
-                            </ListView.ItemTemplate>
-                        </ListView>
-                    </StackPanel>
-                </Border>
-            </Grid>
-        </Border>
-    </Grid>
+    <controls:Carousel/>
 </Page>
