--- a/RockstarGamesLauncher/Views/SettingsView.xaml
+++ b/RockstarGamesLauncher/Views/SettingsView.xaml
@@ -65,7 +65,7 @@
                                 HorizontalAlignment="Left"
                                 VerticalAlignment="Center"
                                 BorderThickness="0"
-                                Command="{Binding GoToLegalCommand}"
+                                Command="{Binding GotoLegalCommand}"
                                 Foreground="White"
                                 Opacity="0.65">
                                 Legal
